clusters/52poke/default/nginx-52w/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-52w
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-52w
